# moonshotAISI

./: .gitignore  NOTICES.md  README.md  mkdocs.yml  pyproject.toml  requirements.txt  requirements1.txt
.github/: developing-workflows.md
.github/scripts/: run_smoke_test.sh
.github/workflows/: gh-event-notification.yaml  integration-test.yaml  notices-file-gen.yaml  pre-build-checks.yaml  sast-codeql.yaml  smoke-test-cli.yaml  smoke-test.yaml
ci/: run-codeql-summ.sh  run-pip-audit.sh
docs/: contributing.md  faq.md  index.md
docs/getting_started/: first_test.md  overview.md  quick_install.md
docs/resources/: attack_modules.md  cookbooks.md  datasets.md  jupyter_notebook.md  metrics.md  recipes.md
docs/tutorial/cli/: run_agentic_tests.md  run_benchmark_tests.md  run_red_teaming.md
docs/tutorial/contributor/: configure_web_api.md  create_connector.md
docs/tutorial/web-ui/: benchmark.md  create_endpoint.md  redteam.md
docs/user_guide/cli/: add_your_own_tests.md  agentic.md  benchmarking.md  cli_command_list.md
docs/user_guide/web_ui/: choosing_relevant_tests.md  connecting_to_llms.md  web_ui_guide.md
examples/jupyter-notebook/: Moonshot - Pre-Req - Setup.ipynb  Tutorial 1 - Basic Workflow - Execute a Benchmark.ipynb  Tutorial 3 - Basic Workflow - Run Red Teaming Session.ipynb
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
moonshot/: __main__.py  api.py
moonshot/integrations/cli/: cli_errors.py
moonshot/integrations/cli/benchmark/: cookbook.py  recipe.py
moonshot/integrations/cli/common/: common.py  dataset.py  inspect_to_moonshot_results.py
moonshot/integrations/cli/redteam/: session.py
moonshot/integrations/web_api/: app.py  container.py
moonshot/integrations/web_api/routes/: agentic.py
moonshot/integrations/web_api/schemas/: agentic_runner_dto.py  cookbook_create_dto.py  recipe_create_dto.py
moonshot/integrations/web_api/services/: agentic_result_service.py  agentic_service.py  agentic_test_manager.py  context_strategy_service.py  session_service.py
moonshot/integrations/web_api/services/utils/: exceptions_handler.py  results_formatter.py
moonshot/integrations/web_api/status_updater/: moonshot_ui_webhook.py
moonshot/integrations/web_api/status_updater/interface/: benchmark_progress_callback.py  redteam_progress_callback.py
moonshot/integrations/web_api/types/: types.py
moonshot/src/: messages_constants.py
moonshot/src/api/: api_connector.py  api_dataset.py  api_inspect_to_moonshot_results.py  api_recipe.py
moonshot/src/bookmark/: bookmark.py
moonshot/src/configs/: env_variables.py
moonshot/src/connectors/: connector_prompt_arguments.py
moonshot/src/cookbooks/: cookbook.py  cookbook_arguments.py
moonshot/src/datasets/: dataset.py  dataset_arguments.py
moonshot/src/recipes/: recipe.py  recipe_arguments.py
moonshot/src/redteaming/attack/: attack_module.py
moonshot/src/runners/: runner.py  runner_type.py
moonshot/src/tools/: __init__.py  analysis_tools.py  api_keys.json  contract.txt  finish_tool.py  jt3.py  paper_abstract.txt  password.txt  search_tools.py  to_do.txt  tool.py  tools.py  tools_interface.py
moonshot/src/utils/: prompt_resolver.py
moonshot/tools/: __init__.py  analysis_tools.py  finish_tool.py  search_tools.py
tests/unit-tests/cli/: test_recipe.py
tests/unit-tests/common/samples/: sample-dataset.json  sample-dataset.jsonl  tool-recipe-1.json  tool-recipe.json  tools-temp.py
tests/unit-tests/src/: test_api_dataset.py  test_api_inspect_to_moonshot_results.py  test_api_recipe.py  test_bookmark.py
tests/unit-tests/web_api/test_routes/: test_routes_recipe.py
