[build-system]
requires = ["hatchling","hatch-build-scripts"]
build-backend = "hatchling.build"

[project]
name = "sgaisi-moonshotAISI"
version = "0.1.0"
authors = [
    { name="SGAISI Moonshot", email="" }
]
description = "SGAISI advances AI testing with MoonshotAISI."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11, <3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "python-slugify>=8.0.4",
    "python-dotenv>=1.0.1",
    "ijson>=3.3.0",
    "jinja2>=3.1.6",
    "pydantic==2.11.4",
    "pyparsing>=3.2.3",
    "xxhash>=3.5.0",
    "datasets>=2.21.0",
    "pandas>=2.2.3",
    "numpy>=1.26.4",
    "tenacity>=8.5.0",
    "python-multipart>=0.0.20",
    "cryptography (==44.0.1)",
]

[project.optional-dependencies]
web-api = [
    "typing-extensions>=4.12.2",
    "fastapi>=0.116.1",
    "uvicorn>=0.34.3",
    "dependency-injector>=4.45.0",
]
cli = [
    "cmd2>=2.5.11",
    "rich>=13.9.4",
]

[tool.hatch.build.targets.sdist]
exclude = [
  "assets/",
  "ci/",
  "docs/",
  "mkdocs.yml",
  "examples/",
  "misc/",
  "poetry.lock",
  "tests/",
  "test-report.html",
  "test-report.json",
  "test-badge.svg",
  "cov-badge.svg",
  "coverage.json",
  "pytest.ini",
  "run_unit_test.sh"
]

[tool.hatch.build.targets.wheel]
packages = ["moonshot"]
exclude = [
  "assets/",
  "ci/",
  "docs/",
  "mkdocs.yml",
  "examples/",
  "misc/",
  "poetry.lock",
  "tests/",
  "test-report.html",
  "test-report.json",
  "test-badge.svg",
  "cov-badge.svg",
  "coverage.json",
  "pytest.ini",
  "run_unit_test.sh"
]

[project.urls]
Repository = "https://github.com/sgaisi/moonshotAISI"
Documentation = "https://sgaisi.github.io/moonshotAISI/"
Issues = "https://github.com/sgaisi/moonshotAISI/issues"

[tool.hatch.metadata]
allow-direct-references = true

[tool.poetry]
name = "sgaisi-moonshotAISI"
version = "0.1.0"
description = "A simple and modular tool to evaluate and red-team any LLM application."
authors = ["The SGAISI Moonshot Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
aiohappyeyeballs = "~2.5.0"
aiohttp = "~3.12.14"
aiosignal = "~1.4.0"
annotated-types = "~0.7.0"
anyio = "~4.8.0"
attrs = "~25.1.0"
certifi = "~2025.6.15"
charset-normalizer = "~3.4.2"
click = "~8.1.8"
cmd2 = "~2.5.11"
colorama = "~0.4.6"
dependency-injector = "~4.45.0"
dill = "~0.3.8"
fastapi = "~0.116.1"
filelock = "~3.17.0"
frozenlist = "~1.5.0"
h11 = "~0.16.0"
huggingface-hub = "0.33.2"
idna = "~3.10"
ijson = "~3.3.0"
jinja2 = "~3.1.6"
markdown-it-py = "~3.0.0"
markupsafe = "~3.0.2"
mdurl = "~0.1.2"
multidict = "~6.1.0"
multiprocess = "~0.70.16"
packaging = "~24.2"
pandas = "~2.2.3"
pathvalidate = "~3.3.1"
propcache = "~0.2.1"
pyarrow = "~19.0.1"
pydantic = "2.11.4"
pydantic-core = "~2.33.2"
pygments = "~2.19.2"
pyparsing = "~3.2.3"
pyperclip = "~1.9.0"
pyreadline3 = "~3.5.4"
python-dateutil = "~2.9.0.post0"
python-dotenv = "~1.0.1"
python-multipart = "~0.0.20"
python-slugify = "~8.0.4"
pytz = "~2025.2"
pyyaml = "~6.0.2"
requests = "~2.32.4"
rich = "~13.9.4"
six = "~1.17.0"
sniffio = "~1.3.1"
starlette = "~0.47.2"
text-unidecode = "~1.3"
tqdm = "~4.67.1"
tzdata = "~2025.2"
urllib3 = "~2.5.0"
uvicorn = "~0.34.3"
wcwidth = "~0.2.13"
xxhash = "~3.5.0"
yarl = "~1.18.3"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
isort = "^5.13.2"
pre-commit = "^3.8.0"
pytest = "^8.3.2"
coverage = "^7.6.0"
pytest-mock = "^3.14.0"
flake8 = "^7.1.0"
poetry-plugin-export = "^1.8.0"
pyinstrument = "^4.7.1"
anybadge = "^1.14.0"
pytest-cov = "^5.0.0"
pytest-html = "^4.1.1"
pytest-json = "^0.4.0"
pytest-asyncio = "^0.24.0"
